[gd_scene load_steps=7 format=3 uid="uid://ddtfv58qq7pfb"]

[ext_resource type="Script" uid="uid://cmaycph1v71bu" path="res://scripts/WorldManager.gd" id="1_rarhs"]
[ext_resource type="Script" uid="uid://us34jm5m63fg" path="res://scripts/ALife2DSimulation.gd" id="2_vcsgt"]
[ext_resource type="Script" uid="uid://l54cbbnrkvwp" path="res://scripts/RenderingLayer3D.gd" id="3_c01mt"]
[ext_resource type="PackedScene" uid="uid://wfy81srd546q" path="res://scenes/DebugPanel.tscn" id="4_rarhs"]
[ext_resource type="PackedScene" uid="uid://bojgxu1blkqyl" path="res://scenes/NPCManager.tscn" id="5_vcsgt"]
[ext_resource type="PackedScene" uid="uid://byir1qct61fnv" path="res://scenes/CameraController.tscn" id="6_c01mt"]

[node name="Main" type="Node3D"]

[node name="WorldManager" type="Node" parent="."]
script = ExtResource("1_rarhs")

[node name="SimulationLayer2D" type="Node2D" parent="."]
script = ExtResource("2_vcsgt")

[node name="LocationsContainer" type="Node2D" parent="SimulationLayer2D"]

[node name="RenderingLayer3D" type="Node3D" parent="."]
script = ExtResource("3_c01mt")

[node name="Player" type="CharacterBody3D" parent="RenderingLayer3D"]

[node name="Environment" type="WorldEnvironment" parent="RenderingLayer3D"]

[node name="ActiveLocation" type="Node3D" parent="RenderingLayer3D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="DebugPanel" parent="UI" instance=ExtResource("4_rarhs")]
offset_left = 10.0
offset_right = 108.0

[node name="NpcManager" parent="." instance=ExtResource("5_vcsgt")]

[node name="CameraController" parent="." instance=ExtResource("6_c01mt")]
